Update index.html with a typo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 						<h2>Most Recent Version (RiCEv2)</h2>
-						<p>RiCE is currently in continually development. The first version of the questionnaire and initial validation can be found <a href="https://dl.acm.org/doi/abs/10.1145/3544548.3581077">in our publication at CHI</a>. Through ongoing research (update and description coming soon), we suggest researchers use the version of the tool described below. Please cite our CHI publication and signpost to this website using the URL in the footer.  </p>
+						<p>RiCE is currently in continual development. The first version of the questionnaire and initial validation can be found <a href="https://dl.acm.org/doi/abs/10.1145/3544548.3581077">in our publication at CHI</a>. Through ongoing research (update and description coming soon), we suggest researchers use the version of the tool described below. Please cite our CHI publication and signpost to this website using the URL in the footer.  </p>
 						
 						<p><img width=90% src="images/ricev2.png"></p>
 
